# service/src/main/scala/com/finance/business/model/reporting/AccountBalance.scala
@@ -1,0 +1,8 @@
+package com.finance.business.model.reporting
+
+import com.finance.business.model.types.{Id, Usd}
+
+case class AccountBalance(
+  accountId: Id,
+  balance: Usd
+)
