# service/src/main/scala/com/finance/service/handlers/ReportingHandlerImpl.scala
@@ -2,13 +2,25 @@ package com.finance.service.handlers
 
 import cats.Monad
 import cats.implicits._
+import com.finance.business.model.types.Id
 import com.finance.business.services.ReportingService
 import com.finance.business.services.query.{AccountValueQuery => AccountValueQueryModel}
 import com.finance.service.converters.ErrorMapping._
 import com.finance.service.converters.Mapping._
 import com.finance.service.converters.ReportingMapping._
-import com.finance.service.endpoints.definitions.{AccountValue, AccountValueQuery, Error}
-import com.finance.service.endpoints.reporting.{GetAccountValueResponse, GetNetWorthResponse, ReportingHandler}
+import com.finance.service.endpoints.definitions.{
+  AccountBalance,
+  AccountBalanceQuery,
+  AccountValue,
+  AccountValueQuery,
+  Error
+}
+import com.finance.service.endpoints.reporting.{
+  GetAccountBalanceResponse,
+  GetAccountValueResponse,
+  GetNetWorthResponse,
+  ReportingHandler
+}
 import com.finance.service.time.TimeProvider
 
 class ReportingHandlerImpl[F[_]: Monad: TimeProvider](reportingService: ReportingService[F])
@@ -27,5 +39,14 @@ class ReportingHandlerImpl[F[_]: Monad: TimeProvider](reportingService: Reportin
   override def getNetWorth(respond: GetNetWorthResponse.type)(): F[GetNetWorthResponse] =
     TimeProvider[F].now.flatMap { date =>
       reportingService.getNetWorth(date).map(x => respond.Ok(x.value))
+    }
+
+  override def getAccountBalance(respond: GetAccountBalanceResponse.type)(
+    filter: Option[AccountBalanceQuery]
+  ): F[GetAccountBalanceResponse] =
+    TimeProvider[F].now.flatMap { date =>
+      reportingService
+        .getAccountBalance(filter.map(_.mapTo[Set[Id]]).getOrElse(Set.empty), date)
+        .map(x => respond.Ok(x.map(_.mapTo[AccountBalance]).toVector))
     }
 }
